[package]
name = "firefly-lua"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored"] }
firefly-rust = { version = "0.9.3", features = ["talc"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
